renamed Create header to "Add a Gig"

--- a/GigHub/Views/Gigs/Create.cshtml
+++ b/GigHub/Views/Gigs/Create.cshtml
@@ -1,9 +1,9 @@
 ﻿@model GigHub.ViewModels.GigFormViewModel
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Add a Gig";
 }
 
-<h2>Create</h2>
+<h2>Add a Gig</h2>
 <form>
     <div class="form-group">
         @Html.LabelFor(m => m.Venue)
