--- a/GigHub/Content/Site.css
+++ b/GigHub/Content/Site.css
@@ -1,6 +1,7 @@
 ﻿body {
     padding-top: 50px;
     padding-bottom: 20px;
+    font-family: Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 /* Set padding to keep content from hitting the edges */
@@ -24,6 +25,25 @@ textarea {
 }
 
 /* bootstrap override */
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+.h1,
+.h2,
+.h3,
+.h4,
+.h5,
+.h6 {
+    font-family: Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+.tooltip .popover {
+    font-family: Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
 .navbar-inverse {
     background-color: #ff2a00;
     border-color: #ff2a00;
