--- a/GigHub/Content/Site.css
+++ b/GigHub/Content/Site.css
@@ -75,6 +75,12 @@ h6,
     box-shadow: none;
 }
 
+.form-control {
+    font-size: 17px;
+    padding: 20px 15px;
+    border-radius: 9px;
+}
+
 /* Page-level styles */
 
 .gigs { 
@@ -114,13 +120,15 @@ h6,
     position: absolute;
     top: 0;
     left: 70px;
+    min-width: 150px;
 }
 
 .gigs > li .details .artist{
     font-weight: bold;
-    display: block;
+    display: inline-block;
 }
 
-.gigs > li .details .genre { 
-    font-size: 15px;
-}
+    .gigs > li .details .genre {
+        font-size: 16px;
+        display: inline-block;
+    }
