--- a/GigHub/Views/Shared/_LoginPartial.cshtml
+++ b/GigHub/Views/Shared/_LoginPartial.cshtml
@@ -15,7 +15,7 @@
         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">@User.Identity.GetUserName() <span class="caret"></span></a>
         <ul class="dropdown-menu">
             <li>@Html.ActionLink("Manage", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })</li>
-            <li><a href="#">Gigs I'm going</a></li>
+            <li><a href="@Url.Action("Attending", "Gigs")">Gigs I'm going</a></li>
             <li><a href="#">Artists I'm following</a></li>
             <li role="separator" class="divider"></li>
             <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
