--- a/GigHub/Views/Shared/_LoginPartial.cshtml
+++ b/GigHub/Views/Shared/_LoginPartial.cshtml
@@ -17,6 +17,7 @@
             <li>@Html.ActionLink("Manage", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })</li>
             <li><a href="@Url.Action("Attending", "Gigs")">Gigs I'm going</a></li>
             <li><a href="@Url.Action("Following", "Artists")">Artists I'm following</a></li>
+            <li><a href="@Url.Action("Mine", "Gigs")">My Upcoming Gigs</a></li>
             <li role="separator" class="divider"></li>
             <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
         </ul>
