--- a/GigHub/Content/Site.css
+++ b/GigHub/Content/Site.css
@@ -108,6 +108,12 @@ h6,
 
 }
 
+.gigs > li .date .year {
+    font-size: 10px;
+    font-weight: bold;
+    padding: 2px 6px;
+}
+
 .gigs > li .date .month {
     text-transform: uppercase;
     font-size: 14px;
@@ -118,8 +124,8 @@ h6,
 .gigs > li .date .day {
     background: #f7f7f7;
     color: #333;
-    font-size: 20px;
-    padding: 6px 12px;
+    font-size: 18px;
+    padding: 4px 12px;
 }
     
 
