implemented Update a gig

--- a/GigHub/Views/Gigs/Mine.cshtml
+++ b/GigHub/Views/Gigs/Mine.cshtml
@@ -18,9 +18,12 @@
                     <span class="artist">
                         @gig.Venue
                     </span>
-                </div>
-                <div style="height:30px;">
                     <span class="genre">@gig.Genre.Name</span>
+                    <div class="actions">
+                        <a href="@Url.Action("Edit", "Gigs", new { id = gig.Id })">
+                        Edit
+                        </a>
+                    </div>
                 </div>
             </div>
         </li>
