--- a/GigHub/Views/Shared/Gigs.cshtml
+++ b/GigHub/Views/Shared/Gigs.cshtml
@@ -11,6 +11,7 @@
         <div class="date">
             <div class="month">@gig.DateTime.ToString("MMM")</div>
             <div class="day">@gig.DateTime.ToString("d ")</div>
+            <div class="year">@gig.DateTime.ToString("yyyy")</div>
         </div>
         <div class="details">
             <div style="height:30px;">
