--- a/GigHub/Content/Site.css
+++ b/GigHub/Content/Site.css
@@ -84,8 +84,8 @@ h6,
 
 .form-control {
     font-size: 17px;
-    padding: 20px 15px;
     border-radius: 9px;
+    height: 44px;
 }
 
 /* Page-level styles */
@@ -138,10 +138,18 @@ h6,
 
 .gigs > li .details .artist{
     font-weight: bold;
-    display: inline-block;
+    display: block;
 }
 
     .gigs > li .details .genre {
-        font-size: 16px;
-        display: inline-block;
+        font-size: 15px;
+    }
+
+    .gigs > li .actions {
+        font-size: 15px;
+        display: none;
+    }
+
+    .gigs > li:hover .actions {
+        display: block;
     }
