--- a/GigHub/Views/Gigs/GigForm.cshtml
+++ b/GigHub/Views/Gigs/GigForm.cshtml
@@ -1,14 +1,15 @@
 ﻿@model GigHub.ViewModels.GigFormViewModel
 @{
-    ViewBag.Title = "Add a Gig";
+    ViewBag.Title = Model.Heading;
 }
 
-<h2>Add a Gig</h2>
-@using (Html.BeginForm("Create", "Gigs"))
+<h2>@Model.Heading</h2>
+@using (Html.BeginForm(Model.Action, "Gigs"))
 {
     <p class="alert alert-info" >All fields are <strong>required</strong></p>
 
     @Html.AntiForgeryToken()
+    @Html.HiddenFor(m => m.Id)
 
     <div class="form-group">
         @Html.LabelFor(m => m.Venue)
@@ -31,7 +32,7 @@
         @Html.DropDownListFor(m => m.Genre, new SelectList(Model.Genres, "Id", "Name"), new { @class = "form-control" })
         @Html.ValidationMessageFor(m => m.Genre)
     </div>
-    <button type="Submit" class="btn btn-primary">Save</button>
+    <button type="Submit" class="btn btn-primary btn-lg">Save</button>
 }
 @section scripts
 {
