--- a/GigHub/Views/Shared/Gigs.cshtml
+++ b/GigHub/Views/Shared/Gigs.cshtml
@@ -17,6 +17,11 @@
             <div style="height:30px;">
                 <span class="artist">
                     @gig.Artist.Name
+
+                    @if (gig.IsCanceled)
+                    {
+                        <span class="label label-warning">Canceled</span>
+                    }
                     @if (Model.ShowActions)
                     {
                         <button data-artist-id="@gig.ArtistId" class="btn btn-link btn-sm pull-right js-toggle-follow">Follow ?</button>
@@ -25,7 +30,7 @@
             </div>
             <div style="height:30px;">
                 <span class="genre">@gig.Genre.Name</span>
-                @if (Model.ShowActions)
+                @if (Model.ShowActions && !gig.IsCanceled)
                 {
                     <button data-gig-id="@gig.Id" class="btn btn-default btn-sm pull-right js-toggle-attendance">Going ?</button>
                 }
