--- a/GigHub/Views/Shared/_LoginPartial.cshtml
+++ b/GigHub/Views/Shared/_LoginPartial.cshtml
@@ -6,8 +6,11 @@
     @Html.AntiForgeryToken()
 
 <ul class="nav navbar-nav navbar-right">
-    <li>
-        
+    <li class="notifications">
+        <a href="#">
+            <i class="glyphicon glyphicon-globe"></i>
+            <span class="badge hide js-notifications-count"></span>
+        </a>
     </li>
     
 
