--- a/GigHub/Content/Site.less
+++ b/GigHub/Content/Site.less
@@ -213,3 +213,13 @@ h6,
         }
     }
 }
+
+#searchGigs {
+    width: 300px;
+    .form-control {
+        box-shadow: none;
+        -webkit-box-shadow: none;
+        transition: none;
+        -webkit-transition: none;
+    }
+}
