--- a/GigHub/Content/Site.less
+++ b/GigHub/Content/Site.less
@@ -223,3 +223,35 @@ h6,
         -webkit-transition: none;
     }
 }
+
+.gig-detail {
+    width: 250px;
+    display: block;
+
+
+    .artist {
+        display: block;
+        padding-bottom: 10px;
+    }
+
+    .perform-at {
+        padding-bottom: 10px;
+
+        .genre {
+            font-weight: bold;
+        }
+
+        .location {
+            font-weight: bold;
+        }
+
+        .date-time {
+            display:block;
+            font-weight: bold;
+        }
+    }
+}
+
+.no-pointer-event {
+    pointer-events: none;
+}
