--- a/GigHub/Views/Shared/_Layout.cshtml
+++ b/GigHub/Views/Shared/_Layout.cshtml
@@ -36,6 +36,7 @@
     </div>
 
     @Scripts.Render("~/bundles/lib")
+    @Scripts.Render("~/bundles/app")
     @RenderSection("scripts", required: false)
     <script type="text/x-underscore-template" id="notifications-template">
         <ul class="notifications">
