--- a/GigHub/Content/Site.less
+++ b/GigHub/Content/Site.less
@@ -175,6 +175,8 @@ h6,
 
             .genre {
                 font-size: 15px;
+                display: block;
+                margin-bottom: 4px;
             }
         }
 
