--- a/GigHub/Views/Shared/Gigs.cshtml
+++ b/GigHub/Views/Shared/Gigs.cshtml
@@ -26,7 +26,7 @@
                 <div class="year">@gig.DateTime.ToString("yyyy")</div>
             </div>
             <div class="details">
-                <div style="height:30px;">
+                <div>
                     <span class="artist">
                         @Html.ActionLink(gig.Artist.Name, "Details", "Gigs",
                        new { gig.Id }, null)
@@ -44,14 +44,14 @@
                         }
                     </span>
                 </div>
-                <div style="height:30px;">
+                <div>
                     <span class="genre">@gig.Genre</span>
                     @if (Model.ShowActions && !gig.IsCanceled)
                     {
                         <button data-gig-id="@gig.Id"
                                 class="btn
                                 @(gig.UserIsAttending ? "btn-info" : "btn-default")
-                                btn-sm pull-right js-toggle-attendance">
+                                btn-sm js-toggle-attendance">
                             Going @(gig.UserIsAttending ? "" : "?")
                         </button>
                     }
